[tool.poetry]
name = "choanotrack"
version = "1.0.0"
description = "Track and re-render microscopic choanoflagellate colonies based on masks created in LaVision DaVis."
authors = ["tomhata <tomhata@gmail.com>"]
repository = "https://github.com/tomhata/choanotrack"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9.6"
lvreader = {path = "lvreader-1.1.0-cp39-cp39-win_amd64.whl"}
imageio = "^2.14.1"
imageio-ffmpeg = "^0.4.5"
numpy = "^1.22.1"
scikit-image = "^0.19.1"
pandas = "^1.4.0"
tqdm = "^4.62.3"
matplotlib = "^3.5.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^4.0.1"
black = "^22.1.0"
jupyter = "^1.0.0"


[tool.poetry.group.extras.dependencies]
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
